syntax = "proto3";

option java_package = "hmda.persistence.model.serialization";
option optimize_for = SPEED;

import "HmdaFiler.proto";

message CreateHmdaFilerMessage {
    HmdaFilerMessage hmdaFiler = 1;
}

message DeleteHmdaFilerMessage {
    HmdaFilerMessage hmdaFiler = 1;
}

message FindHmdaFilerMessage {
    string institutionId = 1;
}

